Get latest changes from official repository

--- a/_includes/footer-links.html
+++ b/_includes/footer-links.html
@@ -1,6 +1,6 @@
 <h6>Few more links</h6>
 <ul class="menu">
-    <li><a href="{{ site.url }}/about/">About</a></li>
-    <li><a href="{{ site.url }}/blog/">Blog</a></li>
-    <li><a href="{{ site.url }}/faq/">Help / FAQ</a></li>    
+    <li><a href="{{ '/about' | prepend: site.baseurl | prepend: site.url }}">About</a></li>
+    <li><a href="{{ '/blog' | prepend: site.baseurl | prepend: site.url }}">Blog</a></li>
+    <li><a href="{{ '/faq' | prepend: site.baseurl | prepend: site.url }}">Help / FAQ</a></li>    
 </ul>		
