--- a/assets/css/_sass/partials/_variables.scss
+++ b/assets/css/_sass/partials/_variables.scss
@@ -27,4 +27,4 @@ $base-0F: #bc9458;
 
 
 // Fonts 
-$primary-font: 'Ubuntu Mono', sans-serif;
+$primary-font: 'Ubuntu Mono', "Helvetica Neue", Helvetica, Arial, sans-serif;
