--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,34 +13,15 @@
         <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/main.css">
 
         <!-- Modernizr js -->
-        <script src="{{ site.baseurl }}/assets/js/modernizr.js"></script>    
+        <script async src="{{ site.baseurl }}/assets/js/modernizr.js"></script>    
 
-        <!-- Load google font -->
-        <link href='http://fonts.googleapis.com/css?family=Ubuntu+Mono' rel='stylesheet' type='text/css'>
-
-        <!-- IE Fxes -->
-        
+        <!-- IE Fixes -->
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
           <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
           <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-        <![endif]-->
-
-        <script type="text/javascript">
-            WebFontConfig = {
-               google: { families: [ 'Ubuntu+Mono::latin' ] }
-            };
-            (function() {
-                var wf = document.createElement('script');
-                wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
-                        '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
-                wf.type = 'text/javascript';
-                wf.async = 'true';
-                var s = document.getElementsByTagName('script')[0];
-                s.parentNode.insertBefore(wf, s);
-            })();
-        </script>
+        <![endif]-->        
     </head>
     <body class="{{ site.harmony.basetheme }}">
         <header class="main-header">
@@ -64,13 +45,25 @@
                 {% include footer.html %}
             </p>
         </footer>
-    </body>
-    <!-- Google analytics  -->
-    {% include google-analytics.html %}
-    <!-- jQuery -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <!-- When no internet load JQuery from local -->
-    <script>window.jQuery || document.write('<script src="{{ site.baseurl }}/assets/js/jquery.min.js"><\/script>')</script>
-    <!-- Site js -->
-    <script src="{{ site.baseurl }}/assets/js/all.js"></script>
+        <script type="text/javascript">
+          /* To avoid render blocking css */
+          var cb = function() {
+            var l = document.createElement('link'); l.rel = 'stylesheet';
+            l.href = 'http://fonts.googleapis.com/css?family=Ubuntu+Mono&subset=latin';
+            var h = document.getElementsByTagName('head')[0]; h.parentNode.insertBefore(l, h);
+          };
+          var raf = requestAnimationFrame || mozRequestAnimationFrame ||
+              webkitRequestAnimationFrame || msRequestAnimationFrame;
+          if (raf) raf(cb);
+          else window.addEventListener('load', cb);
+        </script>
+        <!-- jQuery -->
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <!-- When no internet load JQuery from local -->
+        <script>window.jQuery || document.write('<script src="{{ site.baseurl }}/assets/js/jquery.min.js"><\/script>')</script>
+        <!-- Site js -->
+        <script src="{{ site.baseurl }}/assets/js/all.js"></script>
+        <!-- Google analytics  -->
+        {% include google-analytics.html %}
+    </body>        
 </html>
