--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,7 +20,7 @@ layout: default
 		    {% for post in site.related_posts limit:3 %}
 		    <li>
 			  <span>{{ post.date | date_to_string }} &raquo;</span>
-			  <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
+			  <a href="{{ post.url | prepend: site.baseurl | prepend: site.url }}">{{ post.title }}</a>
 		    </li>
 		    {% endfor %}
 		</ul>
@@ -30,15 +30,15 @@ layout: default
 	<div class="post-footer">
 		<div class="column-1">
 			{% if page.previous %}
-				<a href="{{page.previous.url | prepend: site.baseurl }}"><< Older</a>
+				<a href="{{page.previous.url | prepend: site.baseurl | prepend: site.url }}"><< Older</a>
 			{% else %}
 				<span><< Older</span>
 			{% endif %}
 		</div>
-		<div class="column-2"><a href="{{ site.url }} ">Home</a></div>
+		<div class="column-2"><a href="{{ '/' | prepend: site.baseurl | prepend: site.url }} ">Home</a></div>
 		<div class="column-3">
 			{% if page.next %}
-				<a href="{{ page.next.url | prepend: site.baseurl }}">Newer >></a>
+				<a href="{{ page.next.url | prepend: site.baseurl | prepend: site.url }}">Newer >></a>
 			{% else %}
 				<span>Newer >></span>
 			{% endif %}
