--- a/_includes/header-links.html
+++ b/_includes/header-links.html
@@ -5,7 +5,7 @@
 	<li>
 		<a href="{{ '/blog' | prepend: site.baseurl | prepend: site.url }}">Blog</a><span>/</span>
 	</li>
-	{% if site.harmony.social.github %}
+	{% if site.harmony.show_download_link %}
 	<li>
 		<a title="{{ site.harmony.social.github }} on Github" 
 			href="https://github.com/gayanvirajith/harmony" target="_blank">
