Add first test post and comments functionality through disqus

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,6 +26,8 @@ layout: default
 		</ul>
 	</div>
 	{% endif %}
+	
+	{% include comments.html %}
 
 	<div class="post-footer">
 		<div class="column-1">
@@ -43,6 +45,5 @@ layout: default
 				<span>Newer >></span>
 			{% endif %}
 		</div>
-	</div>
+	</div>	
 </div>
- 
