--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,11 +1,4 @@
 ---
 layout: default
 ---
-<div class="page-content wc-container">
-	<div class="post">
-		<h1>{{ page.title }}</h1>
-		<div class="post">
-			{{ content }}
-		</div>
-	</div>
-</div>
+{% include page.html %}
