--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,63 +1,68 @@
 <! -- sidebar.html -->
 <header class="sidebar-header" role="banner">
-	<a href="{{ site.BASE_PATH }}/">
-		<img src="http://www.gravatar.com/avatar/{{site.author.email_md5}}?s=150" class="img-circle" />
-	</a>
-	<h3 class="title">
+    <a href="{{ site.BASE_PATH }}/">
+        <img src="http://www.gravatar.com/avatar/{{site.author.email_md5}}?s=150" class="img-circle" />
+    </a>
+    <h3 class="title">
         <a href="{{ site.BASE_PATH }}/">{{ site.title }}</a>
     </h3>
 </header>
 
 {% if site.author.bio %}
 <div id="bio" class="text-center">
-	{{ site.author.bio }}
+    {{ site.author.bio }}
 </div>
 {% endif %}
 
 <div id="contact-list" class="text-center">
-	<ul class="list-unstyled list-inline">
-		{% if site.author.github %}
-		<li>
-			<a class="btn btn-default btn-sm" href="https://github.com/{{ site.author.github }}">
-				<i class="fa fa-github-alt fa-lg"></i>
-			</a>
-		</li>
-		{% endif %}
-		{% if site.author.twitter %}
-		<li>
-			<a class="btn btn-default btn-sm" href="https://twitter.com/{{ site.author.twitter }}">
-				<i class="fa fa-twitter fa-lg"></i>
-			</a>
-		</li>
-		{% endif %}
-		{% if site.author.email %}
-		<li>
-			<a class="btn btn-default btn-sm" href="mailto:{{ site.author.email }}">
-				<i class="fa fa-envelope fa-lg"></i>
-			</a>
-		</li>
-		{% endif %}
-	</ul>
-	<ul id="contact-list-secondary" class="list-unstyled list-inline">
-		{% if site.author.pinterest %}
-		<li>
-			<a class="btn btn-default btn-sm" href="https://pinterest.com/{{ site.author.pinterest }}">
-				<i class="fa fa-pinterest fa-lg"></i>
-			</a>
-		</li>
-		{% endif %}
-		{% if site.author.linkedin %}
-		<li>
-			<a class="btn btn-default btn-sm" href="https://linkedin.com/pub/{{ site.author.linkedin }}">
-				<i class="fa fa-linkedin fa-lg"></i>
-			</a>
-		</li>
-		{% endif %}
-		<li>
-			<a class="btn btn-default btn-sm" href="{{ site.BASE_PATH }}/{{ site.rss_path }}">
-				<i class="fa fa-rss fa-lg"></i>
-			</a>
-		</li>
-	</ul>
+    <ul class="list-unstyled list-inline">
+        {% if site.author.github %}
+        <li>
+            <a class="btn btn-default btn-sm" href="https://github.com/{{ site.author.github }}">
+                <i class="fa fa-github-alt fa-lg"></i>
+            </a>
+        </li>
+        {% endif %}
+        {% if site.author.twitter %}
+        <li>
+            <a class="btn btn-default btn-sm" href="https://twitter.com/{{ site.author.twitter }}">
+                <i class="fa fa-twitter fa-lg"></i>
+            </a>
+        </li>
+        {% endif %}
+        {% if site.author.email %}
+        <li>
+            <a class="btn btn-default btn-sm" href="mailto:{{ site.author.email }}">
+                <i class="fa fa-envelope fa-lg"></i>
+            </a>
+        </li>
+        {% endif %}
+    </ul>
+    <ul id="contact-list-secondary" class="list-unstyled list-inline">
+        {% if site.author.pinterest %}
+        <li>
+            <a class="btn btn-default btn-sm" href="https://pinterest.com/{{ site.author.pinterest }}">
+                <i class="fa fa-pinterest fa-lg"></i>
+            </a>
+        </li>
+        {% endif %}
+        {% if site.author.linkedin %}
+        <li>
+            <a class="btn btn-default btn-sm" href="https://linkedin.com/pub/{{ site.author.linkedin }}">
+                <i class="fa fa-linkedin fa-lg"></i>
+            </a>
+        </li>
+        {% endif %}
+        <li>
+            <a class="btn btn-default btn-sm" href="{{ site.BASE_PATH }}/{{ site.rss_path }}">
+                <i class="fa fa-rss fa-lg"></i>
+            </a>
+        </li>
+    </ul>
+</div>
+<div id="personalInfo" style="padding:12px;">
+    Hi, I am Charalampos Karypidis, a Greek all around .NET software developer who tries to fit other activities, except development, in his life.
+    Currently I am based in Greece in the city of <a href="https://maps.google.com/maps/ms?msid=206456703665638724100.000476c724e3c55d3487a&msa=0&ll=40.62594,22.949066&spn=0.112959,0.264187">Thessaloniki</a>
+    and i am working remotely for a New York based company called <a href="http://www.ordereze.com/">Ordereze.</a> 
 </div>
 <! -- sidebar.html end -->
