--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -61,8 +61,7 @@
     </ul>
 </div>
 <div id="personalInfo" style="padding:12px;">
-    Hi, I am Charalampos Karypidis, a Greek full stack .NET software engineer who tries to fit other activities, except development, in his life.
-    Currently I am based in Greece in the city of <a href="https://maps.google.com/maps/ms?msid=206456703665638724100.000476c724e3c55d3487a&msa=0&ll=40.62594,22.949066&spn=0.112959,0.264187">Thessaloniki</a>
-    and i am working remotely for a New York based company called <a href="http://www.ordereze.com/">Ordereze.</a> 
+    Hi, I am Charalampos Karypidis, a Greek software engineer who tries to fit other activities, except development, in his life.
+    Currently I am based in Brussels, Belgium and I am working as a freelance JavaScript developer building Reactjs applications for the <a href="http://ec.europa.eu/">European Commision</a> 
 </div>
 <! -- sidebar.html end -->
