Fix the link to open in a new tab in the sidebar

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -62,6 +62,6 @@
 </div>
 <div id="personalInfo" style="padding:12px;">
     Hi, I am Charalampos Karypidis, a Greek software engineer who tries to fit other activities, except development, in his life.
-    Currently I am based in Brussels, Belgium and I am working as a freelance JavaScript developer building Reactjs applications for the <a href="http://ec.europa.eu/">European Commision</a> 
+    Currently I am based in Brussels, Belgium and I am working as a freelance JavaScript developer building Reactjs applications for the <a href="http://ec.europa.eu/" target="_blank">European Commision</a> 
 </div>
 <! -- sidebar.html end -->
